# telegram-autoregexbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  autoregexbot.cfg  autoregexbot.cfg.example  docker-compose.yml  noxfile.py  pyproject.toml  secrets.cfg.example
.github/workflows/: build-and-push.yaml
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  sealed-secret.yaml
telegram-autoregexbot/: autoregex.py
telegram_autoregexbot/: __init__.py  autoregex.py  autoregexbot.py
